# controlloporte.it

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose-dev.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: api-code-test.yml  codeql-analysis.yml  ghcr-tag-build.yml  web-code-test.yml
backend/: Dockerfile  Dockerfile.dev  entrypoint.sh  entrypoint_dev.sh  pyproject.toml
backend/api/: main.py
backend/api/app/helpers/: exceptions.py  handlers.py  nat_scan.py  query.py
backend/api/app/routes/: admin.py  v1.py  v2.py
backend/api/app/schemas/: api.py
backend/tests/: conftest.py  test_api_routes.py  test_exception_handlers.py  test_get_requester.py  test_hostname.py  test_query_address.py  test_schemas_api.py  test_valid_address.py
deploy/: Caddyfile  deploy-static.sh
deploy/fail2ban/filter.d/: controlloporte-security-scan.conf
deploy/fail2ban/jail.d/: controlloporte-security-scan.local
frontend/: Dockerfile  Dockerfile.dev  entrypoint.sh
frontend/nginx/: nginx.conf.template
frontend/web/: .prettierrc  eslint.config.mjs  jest.config.js  package.json  webpack.config.js
frontend/web/src/: index.html
frontend/web/src/__tests__/: index.test.js  setup.js
frontend/web/src/assets/: llms-full.txt  llms.txt  robots.txt  sitemap.xml
frontend/web/src/assets/article-sources/: come-verificare-se-una-porta-e-aperta.md  ip-pubblico-nat-cgnat.md  (+5 more)
frontend/web/src/css/: index.css
frontend/web/src/js/: index.js
grafana/: README.md  portchecker-grafana-dashboard.json
nmap-worker/: Dockerfile  worker.py
(+8 files in other folders)
